force-app/main/default/objects/Appliance__c/Appliance__c.object-meta.xml
<CustomObject>
    <description>Appliances assigned to an apartment unit</description>
    <label>Appliance</label>
    <nameField>
        <label>Appliance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>