force-app/main/default/objects/Appliance__c/fields/Assigned_Unit__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Unit__c</fullName>
    <label>Assigned Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>