force-app/main/default/objects/Appliance__c/fields/Last_Serviced_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Serviced_Date__c</fullName>
    <label>Last Serviced Date</label>
    <type>Date</type>
</CustomField>