force-app/main/default/objects/Appliance__c/fields/Mfg_Serial__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Serial__c</fullName>
    <label>Mfg Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>