force-app/main/default/objects/Appliance__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unit to which the appliance is assigned</description>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Appliances</relationshipLabel>
    <relationshipName>Appliances</relationshipName>
    <type>Lookup</type>
</CustomField>