force-app/main/default/objects/Appliance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mfg_Serial__c</columns>
    <columns>Type__c</columns>
    <columns>Brand__c</columns>
    <columns>Active__c</columns>
    <columns>Installed_Date__c</columns>
    <columns>Last_Serviced_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>